--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ jdk:
   - openjdk7
   - oraclejdk8
   - oraclejdk9
-script:  mvn clean test
+script:  mvn -B -pl \!"wro4j maven plugin" clean test
 env: MAVEN_OPTS=" -Xmx2048m -Xms768m -XX:MaxPermSize=512m"
