--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,24 @@
 language: java
 sudo: false # faster builds
+
 jdk:
-  - openjdk7
+#   - openjdk7
   - oraclejdk8
-  - oraclejdk9
-script:  mvn -B -pl \!"wro4j maven plugin" clean test
-env: MAVEN_OPTS=" -Xmx2048m -Xms768m -XX:MaxPermSize=512m"
+#   - oraclejdk9
+script:  mvn -B verify
+# script:  mvn -B -pl \!"wro4j maven plugin" verify
+env: 
+  - MAVEN_OPTS=" -Xmx2048m -Xms768m -XX:MaxPermSize=512m"
+  - FIREBASE_KEY: AIzaSyDU7I6pnN322BvRNN24jRX52owAvuHH1K4
+
+before_install:
+  - unset TRAVIS
+  - unset _JAVA_OPTIONS
+  - wget http://www.deflaker.org/maven/apache-maven-3.5.0.zip
+  - unzip -qq apache-maven-3.5.0.zip
+  - export M2_HOME=$PWD/apache-maven-3.5.0
+  - export PATH=$M2_HOME/bin:$PATH
+
+cache:
+  directories:
+  - $HOME/.m2/repository
